Fixed issue with extra space being added to elements due to font loading

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,26 +1,61 @@
+html {
+	overflow-y: scroll;
+}
+
+body {
+	background: $brand-primary;
+}
+
+
+// HIDE THESE SECTIONS UNTIL PAGE IS READY
+.wrap .main,
+nav.navbar,
+footer.main-footer {
+	visibility: hidden; // hide until page loaded
+
+	.page-ready & {
+		visibility: visible;
+	}
+}
+
+
 .wrap .main {
 	padding: 0;
-	margin: 0;
+	background: $body-bg;
+
+	// On the homepage cover up problem borders
+	.home & {
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			width: 15px;
+			background: $body-bg;
+		}
+		&::before {
+			right: 100%;
+		}
+		&::after {
+			left: 100%;
+		}
+	}
 
 	@include media-breakpoint-up(xs) {
 		padding: 0;
-		margin: 0;
 	}
 	@include media-breakpoint-up(sm) {
 		padding: 0;
-		margin: 0;
 	}
 	@include media-breakpoint-up(md) {
 		padding: 0;
-		margin: 0;
 	}
 	@include media-breakpoint-up(lg) {
 		padding: 0;
-		margin: 0;
 	}
 	@include media-breakpoint-up(xl) {
 		padding: 0;
-		margin: 0;
 	}
 }
 
